feat: trabalhando com o either e notification pattern no caso de uso de criação de categoria